--- a/BoxCompany/pom.xml
+++ b/BoxCompany/pom.xml
@@ -38,6 +38,14 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring-framework.version}</version>
 		</dependency>
+		
+		
+		<!-- commons -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 
 		<!-- Logging with SLF4J & LogBack -->
 		<dependency>
@@ -76,4 +84,33 @@
 		</dependency>
 
 	</dependencies>	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>me.springframework</groupId>
+				<artifactId>spring-me-maven-plugin</artifactId>
+				<version>1.0</version>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.ws</groupId>
+				<artifactId>spring-ws-archetype</artifactId>
+				<version>1.5.10</version>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<version>1.0.0.RELEASE</version>
+			</plugin>
+			<plugin>
+				<groupId>org.springframework.osgi</groupId>
+				<artifactId>spring-osgi-bundle-archetype</artifactId>
+				<version>1.2.1</version>
+			</plugin>
+			<plugin>
+				<groupId>org.eclipse.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.1.4.v20140401</version>
+			</plugin>
+		</plugins>
+	</build>
 </project>
